--- a/client-participation/css/conversationView.scss
+++ b/client-participation/css/conversationView.scss
@@ -1,7 +1,7 @@
 // Copyright (C) 2012-present, The Authors. This program is free software: you can redistribute it and/or  modify it under the terms of the GNU Affero General Public License, version 3, as published by the Free Software Foundation. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details. You should have received a copy of the GNU Affero General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 body {
-  min-height: 300px; // if we're slow to load while in an iframe, we want to indicate that something will appear (TODO spinner)
+  min-height: 100px; // if we're slow to load while in an iframe, we want to indicate that something will appear (TODO spinner)
 }
 
 .top-comments-item, .divisive-comments-item {
@@ -64,7 +64,7 @@ img {
   padding: 0.4em 1em;
   border-radius: 4px;
   border: 0;
-  font-size: 12px;
+  //font-size: 12px;
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
@@ -159,8 +159,9 @@ img {
 }
 
 .lightPanel {
-  background-color: $kennislink-light-gray;
-  padding: 2.5rem;
+  border-radius: 0.66rem;
+  background-color: $kennislink-dark-blue;
+  padding: 1.5rem 2rem;
   //border: solid 1px lightgray;
   //border-radius: 5px;
 }
@@ -308,81 +309,64 @@ img {
   //transition: all .2s ease-in-out;
   color: white;
   border: none;
-  background-color: $kennislink-black;
+  background-color: transparent;
   text-decoration: none;
   font-size: 14px;
-  font-family: "Campton-SemiBold", Helvetica, sans-serif;
+  font-family: "Inter", Helvetica, sans-serif;
   text-rendering: optimizeLegibility;
   padding: 0;
   display: flex;
   align-items: center;
-  margin-right: 1.5rem;
-  margin-top: 0.5rem;
+  margin-right: 1rem;
+  //margin-top: 0.5rem;
   height: 2rem;
 
-  & .reactionButtonIcon svg {
-    height: 10px;
-    fill: white;
-  }
-
   &:hover {
-    background: $brand-color;
+    background: transparent;
     color: black;
 
-    & span:first-child {
-      background: $brand-color-darker;
-    }
-
-    & svg {
-      fill: black;
+    & span {
+      background: white;
     }
   }
 
-  & span{
+  & span {
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 0 0.5rem;
-
-    &:first-child{
-      background: $kennislink-medium-gray;
-    }
-
-    &:last-child{
-      margin-top: 3px;
-    }
+    padding: 0px 1rem 0;
+    //margin-top: 3px;
+    background: transparent;
+    border-radius: 2rem;
+    border: 1px solid white;
+    //transition: .25s all;
   }
 }
 
 #switchBetweenCommentsAndVotingButton {
-  position: absolute;
-  right: 0;
-  top: 0;
+  //position: absolute;
+  //right: 2rem;
+  //top: 1rem;
   margin: 0;
+  color: black;
 
-  background-color: $brand-color;
-  color: $kennislink-black;
-
-  & .reactionButtonIcon svg {
-    fill: $kennislink-black;
+  &:hover span {
+    color: black;
+    background: $brand-color-darker;
+    border: 1px solid $brand-color-darker;
   }
 
-  &:hover {
-    background: $kennislink-black;
-    color: white;
-
-    & svg {
-      fill: white;
-    }
-
-    & span:first-child {
-      background: $kennislink-medium-gray;
-    }
+  & span {
+    background: $brand-color;
+    border: 1px solid $brand-color;
   }
+}
 
-  & span:first-child{
-      background: $brand-color-darker;
-  }
+#showResultsButton {
+  //position: absolute;
+  //right: 8rem;
+  //top: 1rem;
+  margin: 0;
 }
 
 #visualization_div {
@@ -574,12 +558,12 @@ svg {
 
 
 #commentCharCount, #commentCharCountExceeded {
-  top: 2px;
+  top: 0px;
   position: relative;
 }
 
 #commentCharCountExceeded {
-  font-size: 12px;
+  //font-size: 12px;
 }
 
 #comment_shower p, #comment_shower h3 {
