--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -103,7 +103,7 @@
     <span class="screen-reader-text">
       {{remainingStringScreenReader}}
     </span>
-    <p style="color: white; margin-right: 18rem; min-height: 2rem;"><em>{{topic}} ({{remainingString}})</em></p>
+    <p class="vote-intro-text"><em>{{topic}} ({{remainingString}})</em></p>
 
     {{#if false}}
     {{! social stuff }}
