--- a/client-participation/js/templates/comment-form.handlebars
+++ b/client-participation/js/templates/comment-form.handlebars
@@ -1,7 +1,7 @@
 {{!-- Copyright (C) 2012-present, The Authors. This program is free software: you can redistribute it and/or  modify it under the terms of the GNU Affero General Public License, version 3, as published by the Free Software Foundation. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details. You should have received a copy of the GNU Affero General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>. --}}
 
 <div>
-    <p style="color: white; margin-right: 14rem; line-height: normal; font-weight: normal; min-height: 2rem;">
+    <p class="comment-form-intro-text">
         <em>Dien zelf een stelling in waar anderen op kunnen stemmen</em>
     </p>
 </div>
