--- a/client-participation/css/conversationView.scss
+++ b/client-participation/css/conversationView.scss
@@ -303,6 +303,24 @@ img {
   color: white;
 }
 
+.reactionButtons {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: start;
+  gap: 1rem;
+}
+
+@media (max-width: 767px) {
+  .reactionButtons {
+    flex-flow: column;
+    gap: 0.5rem;
+    margin-top: 1rem;
+  }
+}
 
 .reactionButton{
   cursor: pointer;
@@ -317,7 +335,7 @@ img {
   padding: 0;
   display: flex;
   align-items: center;
-  margin-right: 1rem;
+  //margin-right: 1rem;
   //margin-top: 0.5rem;
   height: 2rem;
 
