--- a/client-participation/js/templates/readReactView.handlebars
+++ b/client-participation/js/templates/readReactView.handlebars
@@ -18,7 +18,7 @@
   		{{!-- min-height: 144px; attempt to avoid flashing on vote view load--}}
   	">
 
-    <div style="display: flex; gap: 10px; position: absolute; right: 2rem; top: 1.5rem;">
+    <div class="top-buttons">
         <button class="reactionButton" id="showResultsButton">
             <span>Bekijk resultaten</span>
         </button>
