--- a/client-participation/css/conversationView.scss
+++ b/client-participation/css/conversationView.scss
@@ -1,5 +1,6 @@
 // Copyright (C) 2012-present, The Authors. This program is free software: you can redistribute it and/or  modify it under the terms of the GNU Affero General Public License, version 3, as published by the Free Software Foundation. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details. You should have received a copy of the GNU Affero General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
+html, .participationView { background: $kennislink-dark-blue; }
 body {
   min-height: 100px; // if we're slow to load while in an iframe, we want to indicate that something will appear (TODO spinner)
 }
@@ -597,7 +598,7 @@ svg {
   float: right;
 }
 
-.comment-form-intro-text, .vote-intro-text {
+.comment-form-intro-text, .vote-intro-text, .Notification--warning {
   color: white;
   line-height: normal;
   font-weight: normal;
@@ -613,7 +614,7 @@ svg {
 }
 
 @media (max-width: 619px) {
-  .comment-form-intro-text, .vote-intro-text {
+  .comment-form-intro-text, .vote-intro-text, .Notification--warning {
     margin-right: 0;
     margin-top: 3rem;
   }
