--- a/client-report/src/index.css
+++ b/client-report/src/index.css
@@ -30,3 +30,15 @@ html, body, #root {
   height: 100%;
   overflow: hidden;
 }
+
+/* Important for Safari to allow scrolling */
+#vote_overlay_modal iframe {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.2s, visibility 0.2s, height 0.25s !important;
+}
+
+#vote_overlay_modal[open] iframe {
+  visibility: visible;
+  opacity: 1;
+}
