--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -89,8 +89,8 @@
         </div>
       </form>
     {{else}} {{!-- !canSubscribe --}}
-      <div style="min-height: 2rem;"><strong>{{txt1}}</strong></div>
-      <div style="margin-top: 0.5rem;">{{txt2}}</div>
+      <div style="min-height: 1.7rem;"><strong style="font-weight: 500">{{txt1}}</strong></div>
+      <div style="margin-top: 0.5rem; font-weight: 300">{{txt2}}</div>
     {{/if}} {{!-- /canSubscribe --}}
   {{/if}} {{!-- /subscribed --}}
   </div> {{!-- /empty scenario div --}}
