--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -160,8 +160,8 @@
     {{/if}}
     <p lang="{{lang}}" style="
       {{pMarginStyle}} {{!-- 10 + 36 + 5 from social above --}}
-      font-weight: 400;
-      min-height: 65px;
+      font-weight: 300;
+      min-height: 2.5rem;
       position: relative;
       line-height: 1.3;
       font-size: 18px;
