--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -167,6 +167,7 @@
       font-size: 18px;
       color: white;
       padding-top: 0.5rem;
+      padding-bottom: 0.25rem;
       {{customStyles}}
     "
       dir="auto"
