--- a/client-participation/css/conversationView.scss
+++ b/client-participation/css/conversationView.scss
@@ -381,13 +381,14 @@ img {
     left: 0;
     width: 100%;
   }
+
   #showResultsButton, #switchBetweenCommentsAndVotingButton {
-    width: 100%;
+    width: fit-content;
 
     & span {
       width: 100%;
       justify-content: center;
-      padding: 0 0.5rem 0;
+      padding: 0 0.75rem 0;
       font-size: 0.8rem;
     }
   }
@@ -620,7 +621,7 @@ svg {
 
 .vote-intro-text {
   margin-right: 19rem;
-  font-weight: 300;
+  font-weight: 300 !important;
 }
 
 @media (max-width: 619px) {
