--- a/client-participation/css/conversationView.scss
+++ b/client-participation/css/conversationView.scss
@@ -405,18 +405,37 @@ img {
 
 @media (max-width: 370px) {
   // Reduce side margins on small screens
+  //#showResultsButton {
+  //  margin: 0 0 0 1.5rem;
+  //}
+  //
+  //#switchBetweenCommentsAndVotingButton span {
+  //  margin: 0 1.5rem 0 0;
+  //}
+  //
+  //.lightPanel {
+  //  padding: 1.5rem 1.5rem;
+  //}
+
+  // Show buttons underneath each other
+  .top-buttons {
+    position: initial;
+    flex-direction: column;
+  }
+
+  .vote-intro-text {
+    margin-top: 1.5rem;
+  }
+
   #showResultsButton {
-    margin: 0 0 0 1.5rem;
+    margin: 0;
   }
 
   #switchBetweenCommentsAndVotingButton span {
-    margin: 0 1.5rem 0 0;
-  }
-
-  .lightPanel {
-    padding: 1.5rem 1.5rem;
+    margin: 0;
   }
 }
+
 
 #switchBetweenCommentsAndVotingButton {
   //position: absolute;
